# sum-perf

./: .ghci  .gitignore  LICENSE  README.md  default.nix  sum-perf.cabal  sum-perf.nix
src/: Main.hs
