name:                sum-perf
version:             1.0.0
author:              Shriyans Bhatnagar
maintainer:          shriyansbhatnagar@gmail.com
copyright:           2018 Shriyans Bhatnagar
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sum-perf
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                    ,  criterion
                    ,  monad-loops
                    ,  extra
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
